--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -125,7 +125,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2018-11-16}
+    \date{2018-11-20}
 
 % \defaultfontfeatures{
 %     Path = /home/ghassany/texmf/fonts/opentype/public/fontawesome/}
@@ -6438,6 +6438,338 @@ for several methods of computing an optimal value of \(k\) for
 \(k\)-means cluster analysis:
 \textcolor{white}{[}\faStackOverflow\textcolor{white}{]} here.
 \end{rmdinsight}
+
+◼
+
+\chapter*{PW 7}\label{pw-7}
+\addcontentsline{toc}{chapter}{PW 7}
+
+In this practical work we will learn how to create a report in
+\texttt{Rstudio} using \texttt{Rmarkdown} files. Then we will apply the
+\(k\)-means clustering algorithm using the standard function
+\texttt{kmeans()} in \texttt{R}, we will use the dataset
+\texttt{Ligue1\ 2017/2018}.
+
+\section*{Reporting}\label{reporting-1}
+\addcontentsline{toc}{section}{Reporting}
+
+\subsection*{Markdown}\label{markdown}
+\addcontentsline{toc}{subsection}{Markdown}
+
+Markdown is a lightweight markup language with plain text formatting
+syntax designed so that it can be converted to HTML and many other
+formats (pdf, docx, etc..).
+
+Click \href{http://agea.github.io/tutorial.md/}{here} to see an example
+of a markdown (\texttt{.md}) syntaxes and the result in HTML. The
+markdown syntaxes are on right and their HTML result is on left. You can
+modify the source text to see the result.
+
+\begin{rmdtip}
+\textbf{Extra}: There is some markdown online editors you can use, like
+\href{http://dillinger.io/}{dillinger.io/}. See the Markdown source file
+and the HTML preview. Play with the source text to see the result in the
+preview.
+\end{rmdtip}
+
+\subsection*{R Markdown}\label{r-markdown}
+\addcontentsline{toc}{subsection}{R Markdown}
+
+R Markdown is a variant of Markdown that has embedded \texttt{R} code
+chunks, to be used with the \texttt{knitr} package to make it
+\textbf{easy to create reproducible web-based reports}.
+
+First, in \texttt{Rstudio} create a new \texttt{R\ Markdown} file. A
+default template will be opened. There is some \texttt{R} code in
+\texttt{R\ chunks}. Clink on \texttt{knit}, save your file and see the
+produced output. The output is a html report containing the results of
+the \texttt{R} codes. If your file is named \texttt{report.Rmd}, your
+report is named \texttt{report.html}.
+
+\begin{rmdcaution}
+\begin{itemize}
+\tightlist
+\item
+  Make sure to have the latest version of \texttt{Rstudio}.
+\item
+  If you have problems creating a \texttt{R\ Markdown} file (problem in
+  installing packages, etc..) close your \texttt{Rstudio} and reopen it
+  with administrative tools and retry.
+\item
+  If it doesn't work and in order to not lose more time, write your
+  script in an \texttt{.R} file with your comments and submit it.
+\end{itemize}
+\end{rmdcaution}
+
+\begin{rmdcaution}
+\begin{itemize}
+\item
+  Be ready to submit your report (your \texttt{.html} file) at the end
+  of each class.
+\item
+  You report must be named:
+\end{itemize}
+
+\texttt{YouLastName\_YourFirstName\_WeekNumber.html}
+\end{rmdcaution}
+
+You can find all the informations about R Markdown on this site:
+\href{http://rmarkdown.rstudio.com/lesson-1.html}{rmarkdown.rstudio.com}.
+
+You may also find the following resources helpful:
+
+\begin{itemize}
+\tightlist
+\item
+  \href{https://www.rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf}{The
+  R Markdown Reference Guide}
+\item
+  \href{https://www.rstudio.com/wp-content/uploads/2016/03/rmarkdown-cheatsheet-2.0.pdf}{The
+  R Markdown Cheatsheet}
+\end{itemize}
+
+\subsection*{The report to be
+submitted}\label{the-report-to-be-submitted}
+\addcontentsline{toc}{subsection}{The report to be submitted}
+
+In \texttt{Rstudio}, start by creating a R Markdown file. When you
+create it a default template will be opened with the following first
+lines:
+
+\begin{verbatim}
+---
+title: "Untitled"
+output: html_document
+---
+\end{verbatim}
+
+These lines are the YAML header in which you choose the settings of your
+report (title, author, date, appearance, etc..)
+
+For your submitted report, use the following YAML header:
+
+\begin{verbatim}
+---
+title: "Week 7"
+subtitle: "Clustering"
+author: LastName FirstName
+date: "`#r format(Sys.time())`" # remove the # to show the date
+output:
+  html_document:
+    toc: true
+    toc_depth: 2
+    theme: flatly
+---
+\end{verbatim}
+
+\begin{rmdcaution}
+\textbf{Very Important Remark}: Click on the settings button of
+Rstudio's text editor and choose to Chunk Output in Console.
+
+\begin{figure}
+\centering
+\includegraphics{img/chunk_output_in_console.png}
+\caption{}
+\end{figure}
+\end{rmdcaution}
+
+In the core of your report:
+
+\begin{itemize}
+\tightlist
+\item
+  Put every exercise in a section, name the section \texttt{Exercise\ i}
+  (i is the exercise's number).
+\item
+  Paste the exercise content.
+\item
+  Write the code of the exercise in R chunks.
+\item
+  Run the chunk to make sure it works.
+\item
+  If there is a need, explain the results.
+\item
+  Click on \texttt{knit}
+\end{itemize}
+
+\begin{rmdexercise}
+Submit a report following the instructions above. In the first exercise
+you must continue the analysis of the Boston data set.
+\end{rmdexercise}
+
+\section*{\texorpdfstring{\(k\)-means
+clustering}{k-means clustering}}\label{k-means-clustering}
+\addcontentsline{toc}{section}{\(k\)-means clustering}
+
+\textbf{1.} Download the dataset:
+\textcolor{white}{[}\faTable\textcolor{white}{]} Ligue1 2017-2018 and
+import it into \texttt{R}. Put the argument \texttt{row.names} to 1.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{# You can import directly from my website (instead of downloading it..)}
+\NormalTok{ligue1 <-}\StringTok{ }\KeywordTok{read.csv}\NormalTok{(}\StringTok{"http://mghassany.com/MLcourse/datasets/ligue1_17_18.csv"}\NormalTok{, }\DataTypeTok{row.names=}\DecValTok{1}\NormalTok{, }\DataTypeTok{sep=}\StringTok{";"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\textbf{2.} Print the first two rows of the dataset and the total number
+of features in this dataset.
+
+\subsection*{\texorpdfstring{\texttt{pointsCards}}{pointsCards}}\label{pointscards}
+\addcontentsline{toc}{subsection}{\texttt{pointsCards}}
+
+\textbf{3.} We will first consider a smaller dataset to easily
+understand the results of \(k\)-means. Create a new dataset in which you
+consider only \texttt{Points} and \texttt{Yellow.cards} from the
+original dataset. Name it \texttt{pointsCards}
+
+\textbf{4.} Apply \(k\)-means on \texttt{pointsCards}. Chose \(k=2\)
+clusters and put the number of iterations to 20. Store your results into
+\texttt{km}. (\textbf{Remark}: \texttt{kmeans()} uses a random
+initialization of the clusters, so the results may vary from one call to
+another. Use \texttt{set.seed()} to have reproducible outputs).
+
+\textbf{5.} Print and describe what is inside \texttt{km}.
+
+\textbf{6.} What are the coordinates of the centers of the clusters
+(called also prototypes or centroids) ?
+
+\textbf{7.} Plot the data (\texttt{Yellow.cards} vs \texttt{Points}).
+Color the points corresponding to their cluster.
+
+\textbf{8.} Add to the previous plot the clusters centroids and add the
+names of the observations.
+
+\textbf{9.} Re-run \(k\)-means on \texttt{pointsCards} using 3 and 4
+clusters and store the results into \texttt{km3} and \texttt{km4}
+respectively. Visualize the results like in question \textbf{7} and
+\textbf{8}.
+
+\begin{rmdcaution}
+How many clusters \(k\) do we need in practice? There is not a single
+answer: the advice is to try several and compare. Inspecting the
+`between\_SS / total\_SS' for a good trade-off between the number of
+clusters and the percentage of total variation explained usually gives a
+good starting point for deciding on \(k\) (criterion to select \(k\)
+similar to PCA).
+
+There is several methods of computing an optimal value of \(k\) with
+\texttt{R} code on following \texttt{stackoverflow} answer:
+\textcolor{white}{[}\faStackOverflow\textcolor{white}{]} here.
+\end{rmdcaution}
+
+\textbf{10.} Visualize the ``within groups sum of squares'' of the
+\(k\)-means clustering results (use the code in the link above).
+
+\textbf{11.} Modify the code of the previous question in order to
+visualize the `between\_SS / total\_SS'. Interpret the results.
+
+\subsection*{\texorpdfstring{\texttt{Ligue\ 1}}{Ligue 1}}\label{ligue-1}
+\addcontentsline{toc}{subsection}{\texttt{Ligue\ 1}}
+
+So far, you have only taken the information of two variables for
+performing clustering. Now you will apply \texttt{kmeans()} on the
+original dataset \texttt{ligue1}. Using PCA, we can visualize the
+clustering performed with all the available variables in the dataset.
+
+By default, \texttt{kmeans()} does not standardize the variables, which
+will affect the clustering result. As a consequence, the clustering of a
+dataset will be different if one variable is expressed in millions or in
+tenths. If you want to avoid this distortion, use scale to automatically
+center and standardize the dataset (the result will be a matrix, so you
+need to transform it to a data frame again).
+
+\textbf{12.} Scale the dataset and transform it to a data frame again.
+Store the scaled dataset into \texttt{ligue1\_scaled}.
+
+\textbf{13.} Apply \texttt{kmeans()} on \texttt{ligue1} and on
+\texttt{ligue1\_scaled} using 3 clusters and 20 iterations. Store the
+results into \texttt{km.ligue1} and \texttt{km.ligue1.scaled}
+respectively (do not forget to set a seed)
+
+\textbf{14.} How muny observations there are in each cluster of
+\texttt{km.ligue1} and \texttt{km.ligue1.scaled} ? (you can use
+\texttt{table()}). Do you obtain the same results when you perform
+\texttt{kmeans()} on the scaled and unscaled data?
+
+\subsection*{\texorpdfstring{\texttt{PCA}}{PCA}}\label{pca}
+\addcontentsline{toc}{subsection}{\texttt{PCA}}
+
+\textbf{15.} Apply PCA on \texttt{ligue1} dataset and store you results
+in \texttt{pcaligue1}. Do we need to apply PCA on the scaled dataset?
+Justify your answer.
+
+\textbf{16.} Plot the observations and the variables on the first two
+principal components (biplot). Interpret the results.
+
+\textbf{17.} Visualize the teams on the first two principal components
+and color them with respect to their cluster.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{# You can use the following code, based on `factoextra` library.}
+\KeywordTok{fviz_cluster}\NormalTok{(km.ligue1, }\DataTypeTok{data =}\NormalTok{ ligue1, }\CommentTok{# km.ligue1 is where you stored your kmeans results}
+              \DataTypeTok{palette =} \KeywordTok{c}\NormalTok{(}\StringTok{"red"}\NormalTok{, }\StringTok{"blue"}\NormalTok{, }\StringTok{"green"}\NormalTok{), }\CommentTok{# 3 colors since 3 clusters}
+              \DataTypeTok{ggtheme =} \KeywordTok{theme_minimal}\NormalTok{(),}
+              \DataTypeTok{main =} \StringTok{"Clustering Plot"}
+\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\textbf{18.} Recall that the figure of question \textbf{17} is a
+visualization with PC1 and PC2 of the clustering done with all the
+variables, not on PC1 and PC2. Now apply the \texttt{kmeans()}
+clustering taking only the first two PCs instead the variables of
+original dataset. Visualize the results and compare with the question
+\textbf{17}.
+
+\begin{rmdinsight}
+By applying \(k\)-means only on the PCs we obtain different and less
+accurate result, but it is still an insightful way.
+\end{rmdinsight}
+
+\subsection*{\texorpdfstring{\texttt{Implementing\ k-means}}{Implementing k-means}}\label{implementing-k-means}
+\addcontentsline{toc}{subsection}{\texttt{Implementing\ k-means}}
+
+In this part, you will perform \(k\)-means clustering manually, with
+\(k=2\), on a small example with \(n=6\) observations and \(p=2\)
+features. The observations are as follows.
+
+\begin{longtable}[]{@{}ccc@{}}
+\toprule
+\textbf{Observation} & \textbf{\(X_1\)} &
+\textbf{\(X_2\)}\tabularnewline
+\midrule
+\endhead
+1 & 1 & 4\tabularnewline
+2 & 1 & 3\tabularnewline
+3 & 0 & 4\tabularnewline
+4 & 5 & 1\tabularnewline
+5 & 6 & 2\tabularnewline
+6 & 4 & 0\tabularnewline
+\bottomrule
+\end{longtable}
+
+\textbf{19.} Plot the observations.
+
+\textbf{20.} Randomly assign a cluster label to each observation. You
+can use the \texttt{sample()} command in \texttt{R} to do this. Report
+the cluster labels for each observation.
+
+\textbf{21.} Compute the centroid for each cluster.
+
+\textbf{22.} Create a function that calculates the Euclidean distance
+for two observations.
+
+\textbf{23.} Assign each observation to the centroid to which it is
+closest, in terms of Euclidean distance. Report the cluster labels for
+each observation.
+
+\textbf{24.} Repeat \textbf{21} and \textbf{23} until the answers
+obtained stop changing.
+
+\textbf{25.} In your plot from \textbf{19}, color the observations
+according to the cluster labels obtained.
 
 ◼
 
