--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -6615,6 +6615,14 @@ import it into \texttt{R}. Put the argument \texttt{row.names} to 1.
 \textbf{2.} Print the first two rows of the dataset and the total number
 of features in this dataset.
 
+\begin{rmdtip}
+You can create an awesome HTML table by using the function
+\texttt{kable} from the \texttt{knitr} library. For example, if you want
+to show the first 5 lines and 5 columns of your dataset, you can use
+\texttt{knitr::kable(ligue1{[}1:5,1:5{]})}. Give it a try and see the
+result on your html report!
+\end{rmdtip}
+
 \subsection*{\texorpdfstring{\texttt{pointsCards}}{pointsCards}}\label{pointscards}
 \addcontentsline{toc}{subsection}{\texttt{pointsCards}}
 
